==> IvanOrfanidi/STM32-Tests-Project/STM32Cube_FW_F7_V1.8.0/Middlewares/Third_Party/FreeRTOS/Source/portable/IAR/ARM_CM0/port.c <==
/*
    FreeRTOS V9.0.0 - Copyright (C) 2016 Real Time Engineers Ltd.
    All rights reserved

    VISIT http://www.FreeRTOS.org TO ENSURE YOU ARE USING THE LATEST VERSION.

    This file is part of the FreeRTOS distribution.

    FreeRTOS is free software; you can redistribute it and/or modify it under
    the terms of the GNU General Public License (version 2) as published by the
    Free Software Foundation >>>> AND MODIFIED BY <<<< the FreeRTOS exception.

    ***************************************************************************
    >>!   NOTE: The modification to the GPL is included to allow you to     !<<
    >>!   distribute a combined work that includes FreeRTOS without being   !<<
    >>!   obliged to provide the source code for proprietary components     !<<
    >>!   outside of the FreeRTOS kernel.                                   !<<
    ***************************************************************************

    FreeRTOS is distributed in the hope that it will be useful, but WITHOUT ANY
    WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
    FOR A PARTICULAR PURPOSE.  Full license text is available on the following
    link: http://www.freertos.org/a00114.html

    ***************************************************************************
     *                                                                       *
     *    FreeRTOS provides completely free yet professionally developed,    *
     *    robust, strictly quality controlled, supported, and cross          *
     *    platform software that is more than just the market leader, it     *
     *    is the industry's de facto standard.                               *
     *                                                                       *
     *    Help yourself get started quickly while simultaneously helping     *
     *    to support the FreeRTOS project by purchasing a FreeRTOS           *
     *    tutorial book, reference manual, or both:                          *
     *    http://www.FreeRTOS.org/Documentation                              *
     *                                                                       *
    ***************************************************************************

    http://www.FreeRTOS.org/FAQHelp.html - Having a problem?  Start by reading
    the FAQ page "My application does not run, what could be wrong?".  Have you
    defined configASSERT()?

    http://www.FreeRTOS.org/support - In return for receiving this top quality
    embedded software for free we request you assist our global community by
    participating in the support forum.

    http://www.FreeRTOS.org/training - Investing in training allows your team to
    be as productive as possible as early as possible.  Now you can receive
    FreeRTOS training directly from Richard Barry, CEO of Real Time Engineers
    Ltd, and the world's leading authority on the world's leading RTOS.

    http://www.FreeRTOS.org/plus - A selection of FreeRTOS ecosystem products,
    including FreeRTOS+Trace - an indispensable productivity tool, a DOS
    compatible FAT file system, and our tiny thread aware UDP/IP stack.

    http://www.FreeRTOS.org/labs - Where new FreeRTOS products go to incubate.
    Come and try FreeRTOS+TCP, our new open source TCP/IP stack for FreeRTOS.

    http://www.OpenRTOS.com - Real Time Engineers ltd. license FreeRTOS to High
    Integrity Systems ltd. to sell under the OpenRTOS brand.  Low cost OpenRTOS
    licenses offer ticketed support, indemnification and commercial middleware.

    http://www.SafeRTOS.com - High Integrity Systems also provide a safety
    engineered and independently SIL3 certified version for use in safety and
    mission critical applications that require provable dependability.

    1 tab == 4 spaces!
*/

/*-----------------------------------------------------------
 * Implementation of functions defined in portable.h for the ARM CM0 port.
 *----------------------------------------------------------*/

/* IAR includes. */
#include "intrinsics.h"

/* Scheduler includes. */
#include "FreeRTOS.h"
#include "task.h"

#ifndef configSYSTICK_CLOCK_HZ
#   define configSYSTICK_CLOCK_HZ configCPU_CLOCK_HZ
#endif

/* Constants required to manipulate the NVIC. */
#define portNVIC_SYSTICK_CTRL (*((volatile uint32_t*)0xe000e010))
#define portNVIC_SYSTICK_LOAD (*((volatile uint32_t*)0xe000e014))
#define portNVIC_SYSTICK_CURRENT_VALUE (*((volatile uint32_t*)0xe000e018))
#define portNVIC_SYSPRI2 ((volatile uint32_t*)0xe000ed20)
#define portNVIC_SYSTICK_CLK 0x00000004
#define portNVIC_SYSTICK_INT 0x00000002
#define portNVIC_SYSTICK_ENABLE 0x00000001
#define portNVIC_SYSTICK_COUNT_FLAG (1UL << 16UL)
#define portMIN_INTERRUPT_PRIORITY (255UL)
#define portNVIC_PENDSV_PRI (portMIN_INTERRUPT_PRIORITY << 16UL)
#define portNVIC_SYSTICK_PRI (portMIN_INTERRUPT_PRIORITY << 24UL)

/* Constants required to set up the initial stack. */
#define portINITIAL_XPSR (0x01000000)

/* For backward compatibility, ensure configKERNEL_INTERRUPT_PRIORITY is
defined.  The value 255 should also ensure backward compatibility.
FreeRTOS.org versions prior to V4.3.0 did not include this definition. */
#ifndef configKERNEL_INTERRUPT_PRIORITY
#   define configKERNEL_INTERRUPT_PRIORITY 0
#endif

/* The systick is a 24-bit counter. */
#define portMAX_24_BIT_NUMBER (0xffffffUL)

/* A fiddle factor to estimate the number of SysTick counts that would have
occurred while the SysTick counter is stopped during tickless idle
calculations. */
#define portMISSED_COUNTS_FACTOR (45UL)

/* Each task maintains its own interrupt status in the critical nesting
variable. */
static UBaseType_t uxCriticalNesting = 0xaaaaaaaa;

/*
 * Setup the timer to generate the tick interrupts.
 */
void vPortSetupTimerInterrupt(void);

/*
 * Exception handlers.
 */
void xPortSysTickHandler(void);

/*
 * Start first task is a separate function so it can be tested in isolation.
 */
extern void vPortStartFirstTask(void);

/*
 * Used to catch tasks that attempt to return from their implementing function.
 */
static void prvTaskExitError(void);

/*-----------------------------------------------------------*/

/*
 * The number of SysTick increments that make up one tick period.
 */
#if configUSE_TICKLESS_IDLE == 1
static unsigned long ulTimerCountsForOneTick = 0;
#endif /* configUSE_TICKLESS_IDLE */

/*
 * The maximum number of tick periods that can be suppressed is limited by the
 * 24 bit resolution of the SysTick timer.
 */
#if configUSE_TICKLESS_IDLE == 1
static unsigned long xMaximumPossibleSuppressedTicks = 0;
#endif /* configUSE_TICKLESS_IDLE */

/*
 * Compensate for the CPU cycles that pass while the SysTick is stopped (low
 * power functionality only.
 */
#if configUSE_TICKLESS_IDLE == 1
static unsigned long ulStoppedTimerCompensation = 0;
#endif /* configUSE_TICKLESS_IDLE */

/*
 * See header file for description.
 */
StackType_t* pxPortInitialiseStack(StackType_t* pxTopOfStack, TaskFunction_t pxCode, void* pvParameters)
{
   /* Simulate the stack frame as it would be created by a context switch
   interrupt. */
   pxTopOfStack--; /* Offset added to account for the way the MCU uses the stack on entry/exit of interrupts. */
   *pxTopOfStack = portINITIAL_XPSR; /* xPSR */
   pxTopOfStack--;
   *pxTopOfStack = (StackType_t)pxCode; /* PC */
   pxTopOfStack--;
   *pxTopOfStack = (StackType_t)prvTaskExitError; /* LR */
   pxTopOfStack -= 5; /* R12, R3, R2 and R1. */
   *pxTopOfStack = (StackType_t)pvParameters; /* R0 */
   pxTopOfStack -= 8; /* R11..R4. */

   return pxTopOfStack;
}
/*-----------------------------------------------------------*/

static void prvTaskExitError(void)
{
   /* A function that implements a task must not exit or attempt to return to
   its caller as there is nothing to return to.  If a task wants to exit it
   should instead call vTaskDelete( NULL ).

   Artificially force an assert() to be triggered if configASSERT() is
   defined, then stop here so application writers can catch the error. */
   configASSERT(uxCriticalNesting == ~0UL);
   portDISABLE_INTERRUPTS();
   for (;;)
      ;
}
/*-----------------------------------------------------------*/

/*
 * See header file for description.
 */
BaseType_t xPortStartScheduler(void)
{
   /* Make PendSV and SysTick the lowest priority interrupts. */
   *(portNVIC_SYSPRI2) |= portNVIC_PENDSV_PRI;
   *(portNVIC_SYSPRI2) |= portNVIC_SYSTICK_PRI;

   /* Start the timer that generates the tick ISR.  Interrupts are disabled
   here already. */
   vPortSetupTimerInterrupt();

   /* Initialise the critical nesting count ready for the first task. */
   uxCriticalNesting = 0;

   /* Start the first task. */
   vPortStartFirstTask();

   /* Should not get here! */
   return 0;
}
/*-----------------------------------------------------------*/

void vPortEndScheduler(void)
{
   /* Not implemented in ports where there is nothing to return to.
   Artificially force an assert. */
   configASSERT(uxCriticalNesting == 1000UL);
}
/*-----------------------------------------------------------*/

void vPortYield(void)
{
   /* Set a PendSV to request a context switch. */
   *(portNVIC_INT_CTRL) = portNVIC_PENDSVSET;

   /* Barriers are normally not required but do ensure the code is completely
   within the specified behaviour for the architecture. */
   __DSB();
   __ISB();
}
/*-----------------------------------------------------------*/

void vPortEnterCritical(void)
{
   portDISABLE_INTERRUPTS();
   uxCriticalNesting++;
   __DSB();
   __ISB();
}
/*-----------------------------------------------------------*/

void vPortExitCritical(void)
{
   configASSERT(uxCriticalNesting);
   uxCriticalNesting--;
   if (uxCriticalNesting == 0)
   {
      portENABLE_INTERRUPTS();
   }
}
/*-----------------------------------------------------------*/

void xPortSysTickHandler(void)
{
   uint32_t ulPreviousMask;

   ulPreviousMask = portSET_INTERRUPT_MASK_FROM_ISR();
   {
      /* Increment the RTOS tick. */
      if (xTaskIncrementTick() != pdFALSE)
      {
         /* Pend a context switch. */
         *(portNVIC_INT_CTRL) = portNVIC_PENDSVSET;
      }
   }
   portCLEAR_INTERRUPT_MASK_FROM_ISR(ulPreviousMask);
}
/*-----------------------------------------------------------*/

#if configUSE_TICKLESS_IDLE == 1

__weak void vPortSuppressTicksAndSleep(TickType_t xExpectedIdleTime)
{
   uint32_t ulReloadValue, ulCompleteTickPeriods, ulCompletedSysTickDecrements, ulSysTickCTRL;
   TickType_t xModifiableIdleTime;

   /* Make sure the SysTick reload value does not overflow the counter. */
   if (xExpectedIdleTime > xMaximumPossibleSuppressedTicks)
   {
      xExpectedIdleTime = xMaximumPossibleSuppressedTicks;
   }

   /* Stop the SysTick momentarily.  The time the SysTick is stopped for
   is accounted for as best it can be, but using the tickless mode will
   inevitably result in some tiny drift of the time maintained by the
   kernel with respect to calendar time. */
   portNVIC_SYSTICK_CTRL &= ~portNVIC_SYSTICK_ENABLE;

   /* Calculate the reload value required to wait xExpectedIdleTime
   tick periods.  -1 is used because this code will execute part way
   through one of the tick periods. */
   ulReloadValue = portNVIC_SYSTICK_CURRENT_VALUE + (ulTimerCountsForOneTick * (xExpectedIdleTime - 1UL));
   if (ulReloadValue > ulStoppedTimerCompensation)
   {
      ulReloadValue -= ulStoppedTimerCompensation;
   }

   /* Enter a critical section but don't use the taskENTER_CRITICAL()
   method as that will mask interrupts that should exit sleep mode. */
   __disable_interrupt();

   /* If a context switch is pending or a task is waiting for the scheduler
   to be unsuspended then abandon the low power entry. */
   if (eTaskConfirmSleepModeStatus() == eAbortSleep)
   {
      /* Restart from whatever is left in the count register to complete
      this tick period. */
      portNVIC_SYSTICK_LOAD = portNVIC_SYSTICK_CURRENT_VALUE;

      /* Restart SysTick. */
      portNVIC_SYSTICK_CTRL |= portNVIC_SYSTICK_ENABLE;

      /* Reset the reload register to the value required for normal tick
      periods. */
      portNVIC_SYSTICK_LOAD = ulTimerCountsForOneTick - 1UL;

      /* Re-enable interrupts - see comments above __disable_interrupt()
      call above. */
      __enable_interrupt();
   }
   else
   {
      /* Set the new reload value. */
      portNVIC_SYSTICK_LOAD = ulReloadValue;

      /* Clear the SysTick count flag and set the count value back to
      zero. */
      portNVIC_SYSTICK_CURRENT_VALUE = 0UL;

      /* Restart SysTick. */
      portNVIC_SYSTICK_CTRL |= portNVIC_SYSTICK_ENABLE;

      /* Sleep until something happens.  configPRE_SLEEP_PROCESSING() can
      set its parameter to 0 to indicate that its implementation contains
      its own wait for interrupt or wait for event instruction, and so wfi
      should not be executed again.  However, the original expected idle
      time variable must remain unmodified, so a copy is taken. */
      xModifiableIdleTime = xExpectedIdleTime;
      configPRE_SLEEP_PROCESSING(&xModifiableIdleTime);
      if (xModifiableIdleTime > 0)
      {
         __DSB();
         __WFI();
         __ISB();
      }
      configPOST_SLEEP_PROCESSING(&xExpectedIdleTime);

      /* Stop SysTick.  Again, the time the SysTick is stopped for is
      accounted for as best it can be, but using the tickless mode will
      inevitably result in some tiny drift of the time maintained by the
      kernel with respect to calendar time. */
      ulSysTickCTRL = portNVIC_SYSTICK_CTRL;
      portNVIC_SYSTICK_CTRL = (ulSysTickCTRL & ~portNVIC_SYSTICK_ENABLE);

      /* Re-enable interrupts - see comments above __disable_interrupt()
      call above. */
      __enable_interrupt();

      if ((ulSysTickCTRL & portNVIC_SYSTICK_COUNT_FLAG) != 0)
      {
         uint32_t ulCalculatedLoadValue;

         /* The tick interrupt has already executed, and the SysTick
         count reloaded with ulReloadValue.  Reset the
         portNVIC_SYSTICK_LOAD_REG with whatever remains of this tick
         period. */
         ulCalculatedLoadValue = (ulTimerCountsForOneTick - 1UL) - (ulReloadValue - portNVIC_SYSTICK_CURRENT_VALUE);

         /* Don't allow a tiny value, or values that have somehow
         underflowed because the post sleep hook did something
         that took too long. */
         if ((ulCalculatedLoadValue < ulStoppedTimerCompensation) || (ulCalculatedLoadValue > ulTimerCountsForOneTick))
         {
            ulCalculatedLoadValue = (ulTimerCountsForOneTick - 1UL);
         }

         portNVIC_SYSTICK_LOAD = ulCalculatedLoadValue;

         /* The tick interrupt handler will already have pended the tick
         processing in the kernel.  As the pending tick will be
         processed as soon as this function exits, the tick value
         maintained by the tick is stepped forward by one less than the
         time spent waiting. */
         ulCompleteTickPeriods = xExpectedIdleTime - 1UL;
      }
      else
      {
         /* Something other than the tick interrupt ended the sleep.
         Work out how long the sleep lasted rounded to complete tick
         periods (not the ulReload value which accounted for part
         ticks). */
         ulCompletedSysTickDecrements = (xExpectedIdleTime * ulTimerCountsForOneTick) - portNVIC_SYSTICK_CURRENT_VALUE;

         /* How many complete tick periods passed while the processor
         was waiting? */
         ulCompleteTickPeriods = ulCompletedSysTickDecrements / ulTimerCountsForOneTick;

         /* The reload value is set to whatever fraction of a single tick
         period remains. */
         portNVIC_SYSTICK_LOAD = ((ulCompleteTickPeriods + 1) * ulTimerCountsForOneTick) - ulCompletedSysTickDecrements;
      }

      /* Restart SysTick so it runs from portNVIC_SYSTICK_LOAD_REG
      again, then set portNVIC_SYSTICK_LOAD_REG back to its standard
      value.  The critical section is used to ensure the tick interrupt
      can only execute once in the case that the reload register is near
      zero. */
      portNVIC_SYSTICK_CURRENT_VALUE = 0UL;
      portENTER_CRITICAL();
      {
         portNVIC_SYSTICK_CTRL |= portNVIC_SYSTICK_ENABLE;
         vTaskStepTick(ulCompleteTickPeriods);
         portNVIC_SYSTICK_LOAD = ulTimerCountsForOneTick - 1UL;
      }
      portEXIT_CRITICAL();
   }
}

#endif /* #if configUSE_TICKLESS_IDLE */
/*-----------------------------------------------------------*/

/*
 * Setup the systick timer to generate the tick interrupts at the required
 * frequency.
 */
__weak void vPortSetupTimerInterrupt(void)
{
/* Calculate the constants required to configure the tick interrupt. */
#if configUSE_TICKLESS_IDLE == 1
   {
      ulTimerCountsForOneTick = (configSYSTICK_CLOCK_HZ / configTICK_RATE_HZ);
      xMaximumPossibleSuppressedTicks = portMAX_24_BIT_NUMBER / ulTimerCountsForOneTick;
      ulStoppedTimerCompensation = portMISSED_COUNTS_FACTOR / (configCPU_CLOCK_HZ / configSYSTICK_CLOCK_HZ);
   }
#endif /* configUSE_TICKLESS_IDLE */

   /* Configure SysTick to interrupt at the requested rate. */
   portNVIC_SYSTICK_LOAD = (configCPU_CLOCK_HZ / configTICK_RATE_HZ) - 1UL;
   portNVIC_SYSTICK_CTRL = portNVIC_SYSTICK_CLK | portNVIC_SYSTICK_INT | portNVIC_SYSTICK_ENABLE;
}
/*-----------------------------------------------------------*/
